--- a/src/base-theme/styles/accessUrl.styl
+++ b/src/base-theme/styles/accessUrl.styl
@@ -18,16 +18,18 @@
       line-height: 28px;
       background-color: $pane-item-background-color;
       padding: 0 10px;
+      display: flex;
       input {
         line-height: 16px;
         margin-left: 6px;
         vertical-align: top;
-        margin-top: 2px;
+        margin-top: 3px;
+        margin-right: 6px;
       }
       .btn {
         margin-left: 6px;
         vertical-align: top;
-        margin-top: 2px;
+        margin-top: 3px;
       }
       .fa-refresh {
         position: absolute;
@@ -36,6 +38,24 @@
         cursor: pointer;
         &:hover {
           opacity: .5;
+        }
+      }
+      .panel-title {
+        flex: 1;
+        .fa {
+          margin-right: 4px;
+        }
+      }
+      .panel-title-right {
+        padding-right: 20px;
+        .opt-label {
+          cursor: pointer;
+          .fa {
+            margin-right: 4px;
+            &:hover {
+              opacity: .5;
+            }
+          }
         }
       }
     }
@@ -73,6 +93,11 @@
       display: none;
       position: absolute;
       background: #FFF
+      width: 136px;
+      height: 136px;
+      border: 4px solid #FFF;
+      overflow: hidden;
+      box-shadow: 0 4px 20px 1px rgba(0, 0, 0, .3);
       // padding: 5px;
       &.show {
         display: block;
