Add permanent port

--- a/src/base-theme/styles/accessUrl.styl
+++ b/src/base-theme/styles/accessUrl.styl
@@ -88,6 +88,16 @@
           cursor: pointer;
         }
       }
+      .post-item-ttl {
+        width: 120px;
+      }
+      .post-item-upgrade {
+        padding-left: 10px;
+        cursor: pointer;
+        .fa {
+          margin-right: 4px;
+        }
+      }
     }
     .qr-container {
       display: none;
