Fix permanent btn

--- a/src/base-theme/styles/accessUrl.styl
+++ b/src/base-theme/styles/accessUrl.styl
@@ -88,11 +88,18 @@
           cursor: pointer;
         }
       }
+      .post-item-info {
+        line-height: 22px;
+        display: flex;
+        padding-top: 4px;
+      }
       .post-item-ttl {
         width: 120px;
+        font-weight: normal;
+        margin-bottom: 0;
+        line-height: 22px;
       }
       .post-item-upgrade {
-        padding-left: 10px;
         cursor: pointer;
         .fa {
           margin-right: 4px;
