Change permanent btn

--- a/src/base-theme/styles/accessUrl.styl
+++ b/src/base-theme/styles/accessUrl.styl
@@ -82,6 +82,7 @@
       .port-content {
         flex-grow: 1;
         line-height: 14px;
+        word-break: break-all;
       }
       .extra {
         .fa {
@@ -97,7 +98,7 @@
         width: 120px;
         font-weight: normal;
         margin-bottom: 0;
-        line-height: 22px;
+        line-height: 26px;
       }
       .post-item-upgrade {
         cursor: pointer;
