--- a/src/base-theme/styles/accessUrl.styl
+++ b/src/base-theme/styles/accessUrl.styl
@@ -16,7 +16,7 @@
     .panel-heading {
       height: 28px;
       line-height: 28px;
-      background-color: $pane-item-background-color;
+      background-color: $pane-item-border-color;
       padding: 0 10px;
       display: flex;
       input {
@@ -69,7 +69,7 @@
       overflow: auto;
       .create-url {
         padding-bottom: 20px;
-        border-bottom: 1px solid #f5f5f5;
+        border-bottom: 1px solid $pane-item-background-color;
         .url-tip {
           padding: 10px;
           line-height: 20px;
